[metadata]
name = music-sort
version = attr: music_sort.__version__
description = Organize audio files and generate tracklists for Arduino serial audio players like the YX5300 and JQ6500-28P
keywords = YX5300, YX6300, JQ6500, JQ6500-28P, JQ6500-16P, sdcard, arduino, esp32, esp8266
author = Thijs Triemstra
author_email = info@collab.nl
url = https://github.com/thijstriemstra/music-sort
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options.entry_points]
console_scripts =
    music-sort = music_sort:run

[options]
zip_safe = False
packages = find:
python_requires = >=3.6, <4

[options.extras_require]
docs = sphinx>=1.5.1
qa = flake8; rstcheck

[bdist_wheel]
universal = 1

[flake8]
ignore = E121, E122, E124, E125, E127, E128, E241, E402, E501, E731, E722
exclude =
    .ropeproject,
    .tox,
    .eggs,
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist
